add release plugin, scm

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
         </plugins>
     </build>
 
+    <scm>
+        <developerConnection>scm:https://github.com/dboeckli/sfg-pet-clinic.git</developerConnection>
+    </scm>
+
+
 
 
 </project>
