--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:dboeckli/sfg-pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/dboeckli/sfg-pet-clinic.git</developerConnection>
     </scm>
 
 </project>
