--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
     <build>
         <plugins>
+            <!-- release -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
