--- a/sfg-pet-clinic-web/pom.xml
+++ b/sfg-pet-clinic-web/pom.xml
@@ -88,6 +88,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
@@ -136,6 +142,8 @@
                         <artifactId>mockito-core</artifactId>
                         <version>2.23.0</version>
                     </dependency>
+
+
                 </dependencies>
             </plugin>
         </plugins>
