--- a/sfg-pet-clinic-web/pom.xml
+++ b/sfg-pet-clinic-web/pom.xml
@@ -8,6 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sfg-pet-clinic-web</artifactId>
+    <name>${project.artifactId}</name>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
