--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -132,7 +132,7 @@ jobs:
             mvn -B versions:set -e -DnewVersion="$BRANCH_MVN_VERSION"
           fi
           # TODO: deploy currently is failing. reason not known
-          mvn -B -e install -s $GITHUB_WORKSPACE/settings.xml
+          #mvn -B -e install -s $GITHUB_WORKSPACE/settings.xml
           mvn -B -e -X deploy -s $GITHUB_WORKSPACE/settings.xml
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
