--- a/sfg-pet-clinic-data/pom.xml
+++ b/sfg-pet-clinic-data/pom.xml
@@ -7,6 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>guru.springframework.sfg-pet-clinic-data</groupId>
     <artifactId>sfg-pet-clinic-data</artifactId>
     <name>${project.artifactId}</name>
 
