--- a/sfg-pet-clinic-web/pom.xml
+++ b/sfg-pet-clinic-web/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
+        <groupId>guru.springframework.sfg-pet-clinic</groupId>
         <artifactId>sfg-pet-clinic</artifactId>
-        <groupId>guru.springframework</groupId>
         <version>0.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -30,7 +30,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>guru.springframework</groupId>
+            <groupId>guru.springframework.sfg-pet-clinic</groupId>
             <artifactId>sfg-pet-clinic-data</artifactId>
             <version>${project.version}</version>
         </dependency>
