--- a/sfg-pet-clinic-data/pom.xml
+++ b/sfg-pet-clinic-data/pom.xml
@@ -30,6 +30,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
             <scope>runtime</scope>
         </dependency>
 
