fix maven deploy

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -137,4 +137,4 @@ jobs:
         if: always()
         with:
           files: |
-            ./target/surefire-reports/TEST-*.xml
+            target/surefire-reports/TEST-*.xml
