main branch is main, not master

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -244,6 +244,6 @@ jobs:
                   -Dsonar.organization=${ORGANIZATION} \
                   -Dsonar.projectKey="${ORGANIZATION}_${ARTIFACT_ID}" \
                   -Dsonar.branch.name=${BRANCH_NAME} \
-                  -Dsonar.branch.target=master
+                  -Dsonar.branch.target=main
           fi 
         
