main branch is main, not master

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -233,7 +233,7 @@ jobs:
                   -Dsonar.sourceEncoding=UTF-8 \
                   -Dsonar.organization=${ORGANIZATION} \
                   -Dsonar.projectKey="${ORGANIZATION}_${ARTIFACT_ID}" \
-                  -Dsonar.branch.name=master
+                  -Dsonar.branch.name=main
           else
             mvn -B versions:set -e -DnewVersion="$BRANCH_MVN_VERSION"
             mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
