--- a/sfg-pet-clinic-web/pom.xml
+++ b/sfg-pet-clinic-web/pom.xml
@@ -323,6 +323,7 @@
                     <dependency>
                         <groupId>org.mockito</groupId>
                         <artifactId>mockito-core</artifactId>
+                        <version>${mockito.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
