--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -196,8 +196,8 @@ jobs:
         if: always()
         with:
           files: |
-            ./target/surefire-reports/TEST-*.xml
-            ./target/failsafe-reports/TEST-*.xml
+            **/target/surefire-reports/TEST-*.xml
+            **/target/failsafe-reports/TEST-*.xml
       
       - name: analyze
         env:
