--- a/sfg-pet-clinic-web/src/main/wro/wro.properties
+++ b/sfg-pet-clinic-web/src/main/wro/wro.properties
@@ -1,4 +1,7 @@
+debug=true
+minimizeEnabled=true
+
 #List of preProcessors
-preProcessors=lessCssImport
+preProcessors=sassCss
 #List of postProcessors
-postProcessors=less4j
+postProcessors=cssMinJawr
